@@ -1,7 +1,7 @@
 #ifndef CONFIG_H 
 #define CONFIG_H
 
-#define VERSION "3.0.9" 
+#define VERSION "3.0.10" 
 
 //#define DEBUGNAN
 
