@@ -15,6 +15,27 @@ inline std::ostream & operator << (std::ostream & out, const StringKey &s)
   return out;
 }
 
+  static char *static_itoa(unsigned pos) {
+    static char buf[] = "0123456789"; // to put end of string character at buf[10]
+	static const unsigned bufsize=sizeof(buf);
+	Assert(bufsize==11);    
+    // decimal string for int
+    char *num=buf+bufsize-1; // place at the '\0'
+    if ( !pos ) {      
+	  *--num='0';
+    } else {
+      char rem;
+	  // 3digit lookup table, divide by 1000 faster?
+      while ( pos ) {
+		rem = pos;
+		pos /= 10;
+		rem -= 10*pos;		// maybe this is faster than mod because we are already dividing
+		*--num = '0' + (char)rem;
+      }	
+    }
+    return num;
+  }
+
 
 class StringPool {
   static char * clone(const char *str) {
@@ -27,6 +48,7 @@ class StringPool {
 	static HashTable<StringKey, int> counts;
 #endif
 public:
+  enum {is_noop=0};
 	static StringKey borrow(char *str) {
 	  StringKey s(str);
 	  if (s.str == StringKey::empty)
@@ -73,25 +95,26 @@ public:
 
 template <class Sym=StringKey,class StrPool=STRINGPOOLCLASS>
 class Alphabet {
-  DynamicArray<char *> names;
-  HashTable<Sym, int> ht;
+  DynamicArray<Sym> names;
+  typedef HashTable<Sym, unsigned> SymIndex;
+  SymIndex ht;
  public:
   Alphabet() { }
-  Alphabet(char * c) {
+  Alphabet(Sym c) {
     add(c);
   }
   Alphabet(const Alphabet &a) {
 #ifdef NODELETE
     memcpy(this, &a, sizeof(Alphabet));
 #else
-    for ( unsigned int i = 0 ; i < a.names.size(); ++i )
+    for ( unsigned i = 0 ; i < a.names.size(); ++i )
       add(a.names[i]);
 #endif
   }
   void dump() { 	Config::debug() << ht; }
   bool verify() {
 #ifdef DEBUG
-	for (unsigned int i = 0 ; i < names.size(); ++i ) {
+	for (unsigned i = 0 ; i < names.size(); ++i ) {
 	  static char buf[1000];
 	  Assert(*find(names[i])==i);
 	  strcpy(buf,names[i]);
@@ -108,64 +131,49 @@ class Alphabet {
       memcpy(this, &a, s);
       memcpy(&a, swapTemp, s);
     }
-  void add(char *name) { 
+  void add(Sym name) { 
 	Assert(find(name) == NULL);
-    Sym s = StrPool::borrow(name);
-	ht[s]=names.size();
-    names.push_back(s.str);
+	if (!StrPool::is_noop)
+	  name = StrPool::borrow(name);
+	//ht[name]=names.size();
+	::add(ht,name,names.size());
+    names.push_back(name);
   }
-  int *find(char *name) const {
-    return find_second(ht,(Sym)name);
+  unsigned *find(Sym name) const {
+    return find_second(ht,name);
   }
-  int indexOf(const char *name) {
-    Assert(name);
-    Sym s = const_cast<char *>(name);
+  unsigned indexOf(Sym s) {
+    //Assert(name);
+    //Sym s = const_cast<char *>(name);
 
-	typename HashTable<Sym,int>::insert_return_type it;
-	if ( (it = ht.insert(HashTable<Sym,int>::value_type(s,names.size()))).second )
-	  names.push_back(*const_cast<Sym*>(&(it.first->first)) = StrPool::borrow(s)); // might seem naughty, (can't change hash table keys) but it's still equal.		
+	typename SymIndex::insert_return_type it;
+	if ( (it = ht.insert(SymIndex::value_type(s,names.size()))).second ) {
+	  if (StrPool::is_noop)
+		names.push_back(s);
+	  else
+		names.push_back(*const_cast<Sym*>(&(it.first->first)) = StrPool::borrow(s)); // might seem naughty, (can't change hash table keys) but it's still equal.
+	}
     return it.first->second;	
   }
-  const char * operator[](int pos) const {
+  Sym operator[](unsigned pos) const {
     //Assert(pos < size() && pos >= 0);
     return names[pos];
   }
-  static char *itoa(int pos) {
-    static char buf[10] = "012345678"; // to put end of string character at buf[9]
-    int iNum = pos;
-    // decimal string for int
-    char *num;
-    if ( !pos ) {
-      buf[8] = '0';
-      num = buf + 8;
-    } else {
-      int rem, i = 9;
-      while ( pos ) {
-	rem = pos;
-	pos /= 10;
-	rem -= 10*pos;		// maybe this is faster than mod because we are already dividing
-	buf[--i] = '0' + (char)rem;
-      }
-	
-      num = buf + i;
-    }
-    return num;
-  }
-  const char * operator()(int pos) {
+  Sym operator()(int pos) {
     int iNum = pos;
     if (iNum >= size() || names[iNum] == Sym::empty ) {
       // decimal string for int
      
-      Sym k;
-      k.str = itoa(iNum);
-      k = StrPool::borrow(k);
+      Sym k = static_itoa(iNum);
+	  if (!StrPool::is_noop)
+		k = StrPool::borrow(k);
       if ( iNum < names.size() ) {
-		names[iNum] = k.str;
+		names[iNum] = k;
 		ht[k]=iNum;
       } else {
 	for ( int i = names.size() ; i < iNum ; ++i )
 	  names.push_back(Sym::empty);
-	names.push_back(k.str);
+	names.push_back(k);
 	ht[k]=iNum;
 	Assert(names.size() == iNum+1);
       }
@@ -178,10 +186,11 @@ class Alphabet {
 	if ( marked[i] ) {
 	  ht.erase(names[i]);
 #ifndef NODELETE
-	  StrPool::giveBack(names[i]);
+	  if (!StrPool::is_noop)
+		StrPool::giveBack(names[i]);
 #endif
 	} else {
-	  int &rI = ht.find(names[i])->second;
+	  unsigned &rI = ht.find(names[i])->second;
 	  rI = oldToNew[rI];
 	}
       }
@@ -191,17 +200,18 @@ class Alphabet {
     // aMap will give which letter in Alphabet o the letters in a 
     // correspond to, or -1 if the letter is not in Alphabet o.    
   {
-      int  *ip;
+      unsigned int  *ip;
       for ( unsigned int i = 0 ; i < size() ; ++i )
 	aMap[i] = (( ip = o.find(names[i])) ? (*ip) : -1 );
     }
-  unsigned int size() const { return names.size(); }
+   unsigned size() const { return names.size(); }
   ~Alphabet()
     {
 #ifndef NODELETE
+	 if (!StrPool::is_noop)
       for ( unsigned int  i = 0; i < names.size() ; ++i )
-	if ( names[i] != Sym::empty )
-	  StrPool::giveBack(names[i]);
+	if ( names[i] != Sym::empty )	  
+		StrPool::giveBack(names[i]);
 #endif
     }
 	template<class T>  friend std::ostream & operator << (std::ostream &out, Alphabet<T> &alph);
@@ -216,5 +226,23 @@ inline std::ostream & operator << (std::ostream &out, Alphabet<T> &alph)
   return out;
 }
 
+#ifdef TEST
+#include "../../tt/test.hpp"
+BOOST_AUTO_UNIT_TEST( static_itoa )
+{
+  BOOST_CHECK(!strcmp(static_itoa(0),"0"));
+  BOOST_CHECK(!strcmp(static_itoa(3),"3"));
+  BOOST_CHECK(!strcmp(static_itoa(10),"10"));
+  BOOST_CHECK(!strcmp(static_itoa(109),"109"));
+  BOOST_CHECK(!strcmp(static_itoa(190),"190"));
+  BOOST_CHECK(!strcmp(static_itoa(199),"199"));
+  BOOST_CHECK(!strcmp(static_itoa(1534567890),"1534567890"));
+}
+
+BOOST_AUTO_UNIT_TEST( dummy )
+{
+BOOST_CHECK(true);  
+}
+#endif
 
 #endif
